stopped mason-stacks from overlapping

--- a/public/assets/general.css
+++ b/public/assets/general.css
@@ -379,7 +379,7 @@ a._blade{
 table ._list-img{
 	width: 150px;
 }
-.mason-stack .item{
+.mason-stacks .item{
 	border: 5px solid gray;
 	border-radius: 5px;
 	margin: 5px;
